fix the layout bug in player

--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -8,7 +8,7 @@
 
   player {
     display: block;
-    width: 100%;
+    //width: 100%;
     height: 100%;
     flex: 0 1 auto;
   }
